src/ion/test/fail/undeclared_assigment.ion

//  cannot assign to an undeclared variable
x := 0
